--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample web api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "api"
@@ -12,6 +13,8 @@
   "author": "prabodha manoranga",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.4"
   }
 }
