--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "prabodha manoranga",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4"
